--- a/css/nav.css
+++ b/css/nav.css
@@ -1,3 +1,20 @@
+/* SECTION : Import Variables */
+
+@import "variables.css";
+
+/* SECTION : Mertial Icons */
+
+.material-icons.md-nav-icon {
+  color: var(--nav_icon_color);
+  font-size: 25px;
+}
+
+.material-icons.md-nav-hover {
+  color: var(--nav_icon_hover);
+}
+
+/* SECTION : nav bar layout */
+
 .layout__nav {
   background: #2e313b;
 }
@@ -6,4 +23,16 @@
   width: 42.72px;
   height: 30px;
   margin: 15px 18.64px;
+}
+
+.layout__nav--items {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+}
+
+.layout__nav__items--icon {
+  margin: 17.5px 0px;
 }
