--- a/css/components/nav.css
+++ b/css/components/nav.css
@@ -5,8 +5,18 @@
   font-size: 25px;
 }
 
+.material-icons-outlined.md-nav-icon {
+  color: var(--nav_icon_color);
+  font-size: 25px;
+}
+
 .material-icons.md-nav-icon:hover {
   color: var(--nav_icon_hover);
+}
+
+.material-icons-outlined.md-nav-icon:hover {
+  color: var(--nav_icon_hover);
+  font-size: 25px;
 }
 
 /* SECTION : nav bar layout */
@@ -31,4 +41,41 @@
 
 .layout__nav__items--icon {
   margin: 17.5px 0px;
+}
+
+#subnav--toggle {
+  width: 220px;
+  list-style: none;
+  position: absolute;
+  left: 80px;
+  top: 60px;
+  background: var(--sub_nav_color);
+  height: calc(100% - 100px);
+  color: var(--sub_nav_font_color);
+}
+
+#subnav--toggle,
+#subnav {
+  display: none;
+}
+
+input:checked ~ label i {
+  color: var(--nav_icon_hover);
+  font-size: 25px;
+}
+
+#subnav:checked + #subnav--toggle {
+  display: flex;
+  flex-direction: column;
+  padding: 20px 30px;
+}
+
+.subnav--toggle__title {
+  color: var(--white);
+  padding-bottom: 15px;
+}
+
+.subnav--toggle__subject {
+  line-height: 34.82px;
+  padding-left: 5px;
 }
