--- a/css/components/main.css
+++ b/css/components/main.css
@@ -3,8 +3,10 @@
 }
 
 .content__frame {
+  display: flex;
+  flex-direction: column;
   height: 100%;
   margin: 40px;
-  padding: 20px 25px;
+  padding: 20px 30px;
   background: white;
 }
