--- a/css/home_desktop.css
+++ b/css/home_desktop.css
@@ -21,10 +21,24 @@
   color: var(--font_dark);
 }
 
-/* SECTION - HOME CONTENT */
+/* SECTION - CONTENT SIZES */
 
-.content__head {
+.content__head,
+.content__subhead,
+.content__subhead-two,
+.content__subhead-three,
+.content__welcome,
+.content__para {
   line-height: 1.3em;
+}
+
+.content__subhead {
+  padding: 30px 0 10px;
+}
+
+.content__subhead-two,
+.content__subhead-three {
+  padding: 10px 0;
 }
 
 .content__logo {
@@ -32,12 +46,7 @@
   margin: 50px;
 }
 
-.content__welcome {
-  line-height: 3em;
-}
-
 .content__para {
-  line-height: 1.3em;
   padding: 10px 0;
 }
 
@@ -45,4 +54,30 @@
   padding: 10px 30px;
   list-style: unset;
   line-height: 1.5em;
+}
+
+.content__list--sub-list {
+  padding: 10px 30px;
+  list-style: circle;
+  line-height: 1.5em;
+}
+
+.content__code {
+  display: flex;
+  flex-direction: column;
+  padding: 30px 100px 30px 30px;
+  margin: 10px 8% 10px 0;
+  background: var(--code_block);
+}
+
+.code__line {
+  line-height: 1.5em;
+  color: var(--code_font) !important;
+}
+
+.horiz-divider {
+  height: 1px;
+  margin: 30px 0;
+  border: none;
+  background: #dfe1e4;
 }
