--- a/css/preset/variables.css
+++ b/css/preset/variables.css
@@ -4,7 +4,8 @@
   --nav_icon_hover: #dbdadd;
   --nav_font_color: #585d6c;
   --sub_nav_color: #24262e;
-  --sub_nav_font_color: #686e72;
+  --sub_nav_font_color: #666e80;
+  --sub_nav_font_hover: #f2f2f2;
   --main_footer_bg_color: #fafafa;
   --home_font_color: #25252b;
   --font_dark: #2c2c34;
