--- a/css/components/nav.css
+++ b/css/components/nav.css
@@ -25,6 +25,7 @@
 }
 
 .material-icons-outlined.md-nav-icon:hover {
+  cursor: pointer;
   color: var(--nav_icon_hover);
 }
 
@@ -56,7 +57,7 @@
   position: absolute;
   left: 80px;
   top: 60px;
-  width: 220px;
+  width: 160px;
   height: calc(100% - 100px);
   list-style: none;
   background: var(--sub_nav_color);
@@ -69,8 +70,8 @@
 }
 
 #subnav:checked + #subnav--toggle {
-  flex-direction: column;
   display: flex;
+  flex-direction: column;
   padding: 20px 30px;
   color: var(--nav_icon_hover);
 }
@@ -83,5 +84,9 @@
 .subnav--toggle__subject {
   padding-left: 5px;
   line-height: 34.82px;
-  color: white;
+  color: var(--sub_nav_font_color);
+}
+
+.subnav--toggle__subject:hover {
+  color: var(--sub_nav_font_hover);
 }
