--- a/css/components/nav.css
+++ b/css/components/nav.css
@@ -78,12 +78,12 @@
 }
 
 .subnav--toggle__title {
+  padding-left: 3px;
   padding-bottom: 15px;
-  color: var(--white);
+  color: var(--sub_nav_font_hover);
 }
 
 .subnav--toggle__subject {
-  padding-left: 5px;
   line-height: 34.82px;
   color: var(--sub_nav_font_color);
 }
