--- a/css/components/header.css
+++ b/css/components/header.css
@@ -9,13 +9,13 @@
 .header__content {
   display: flex;
   justify-content: space-between;
-  width: 240px;
   height: inherit;
   float: right;
   margin: 10px 15px;
 }
 
 .header-content__title {
+  width: 180px;
   font-size: 1.25em;
   font-weight: 700;
   line-height: 40px;
@@ -25,5 +25,6 @@
 .header-content__img {
   width: 40px;
   height: 40px;
+  margin-left: 20px;
   border-radius: 50%;
 }
