--- a/css/components/mobile_spec.css
+++ b/css/components/mobile_spec.css
@@ -14,11 +14,8 @@
   color: var(--menu_icon);
 }
 
-#mobile-nav--toggle {
+.header__mobile-nav--toggle {
   display: none;
-}
-
-#mobile-nav--toggle {
   position: fixed;
   top: 60px;
   width: 100%;
@@ -27,7 +24,7 @@
   color: var(--sub_nav_font_color);
 }
 
-#mobile-nav:checked + #mobile-nav--toggle {
+#mobile-nav:checked + .header__mobile-nav--toggle {
   display: flex;
   flex-direction: column;
   padding: 20px 30px 20px 60px;
