--- a/css/components/content.css
+++ b/css/components/content.css
@@ -145,6 +145,7 @@
   max-width: 500px;
   height: 600px;
   margin: 15px 0;
+  border-radius: 1%;
 }
 
 .content__flex {
@@ -162,15 +163,17 @@
 .flex--frame {
   width: 100%;
   max-width: 380px;
-  height: 600px;
-  margin: 15px 0 15px 20px;
+  height: 570px;
+  margin: 1em;
 }
 
 .frame--video {
-  height: 580px;
+  width: 100%;
+  height: 540px;
+  border-radius: 1%;
 }
 
 .frame-caption {
   color: var(--font_gray);
-  margin: 10px 5px;
+  margin: 0.8em;
 }
