--- a/css/components/nav.css
+++ b/css/components/nav.css
@@ -22,8 +22,8 @@
 }
 
 .material-icons-outlined.md-nav-icon:hover {
-  cursor: pointer;
   color: var(--nav_icon_hover);
+  cursor: pointer;
 }
 
 /* SECTION : nav bar layout */
@@ -33,20 +33,20 @@
 }
 
 .layout-nav-logo {
-  width: 42.72px;
   height: 30px;
   padding: 15px 18.64px;
+  width: 42.72px;
 }
 
 .layout-nav-items {
+  align-items: center;
   display: flex;
   flex-direction: column;
-  top: 60px;
-  margin: 0px 27.5px;
-  position: sticky;
   flex-wrap: nowrap;
   justify-content: space-evenly;
-  align-items: center;
+  margin: 0px 27.5px;
+  position: sticky;
+  top: 60px;
 }
 
 .nav-items-icon {
@@ -54,14 +54,14 @@
 }
 
 .subnav-toggle {
-  position: fixed;
-  left: 80px;
-  top: 0px;
-  width: 160px;
-  height: calc(100%);
-  list-style: none;
   background: var(--sub_nav_color);
   color: var(--sub_nav_font_color);
+  height: calc(100%);
+  left: 80px;
+  list-style: none;
+  position: fixed;
+  top: 0px;
+  width: 160px;
 }
 
 .subnav-toggle,
@@ -70,21 +70,20 @@
 }
 
 #subnav:checked ~ .subnav-toggle {
+  color: var(--nav_icon_hover);
   display: flex;
   flex-direction: column;
-  padding: 20px 30px;
-  padding-top: 80px;
-  color: var(--nav_icon_hover);
+  padding: 80px 30px 20px 30px;
 }
 
 .subnav-toggle-title {
-  padding: 0 0 15px 3px;
   color: var(--sub_nav_font_hover);
+  padding: 0 0 15px 3px;
 }
 
 .subnav-toggle-subject {
-  line-height: 34.82px;
   color: var(--sub_nav_font_color);
+  line-height: 34.82px;
 }
 
 .subnav-toggle-subject:hover {
