feature/refactor-ghan : add comments to html and separate css to components

--- a/css/project_desktop.css
+++ b/css/project_desktop.css
@@ -1,7 +1,7 @@
 /* SECTION - IMPORT CSS PRESETS */
 
 @import "preset/reset.css";
-@import "preset/variables.css";
+@import "preset/colors.css";
 @import "preset/fonts.css";
 @import "preset/layout_subnav_desktop.css";
 
