--- a/css/components/content.css
+++ b/css/components/content.css
@@ -1,3 +1,9 @@
+@import "content/text.css"; /* NOTE - import text styles */
+@import "content/table.css"; /* NOTE - import table styles */
+@import "content/code_block.css"; /* NOTE - import codeblock styles */
+@import "content/multimedia.css"; /* NOTE - import imgs & videos styles */
+@import "content/list.css"; /* NOTE - import list styles */
+
 .layout-content *:not(.content-head) {
   color: var(--font_dark);
   font-family: "NanumSquare";
@@ -11,175 +17,9 @@
 
 /* SECTION - CONTENT SIZES */
 
-.content-head,
-.content-subhead,
-.content-subhead-two,
-.content-subhead-three,
-.content-welcome,
-.content-para {
-  line-height: 1.3em;
-}
-
-.content-subhead {
-  padding: 30px 0 10px;
-}
-
-.content-subhead-two,
-.content-subhead-three {
-  padding: 10px 0;
-}
-
-.content-logo {
-  margin: 50px;
-  max-width: 320px;
-  width: 60%;
-}
-
-.content-para {
-  padding: 10px 0;
-}
-
-.content-table,
-.content-table-thead,
-.content-table-tr {
-  border: 1px solid var(--font_dark);
-}
-
-.content-table {
-  margin: 15px 0;
-  max-width: 550px;
-  width: 100%;
-}
-
-.content-table-thead {
-  background: var(--hor_line);
-  line-height: 2em;
-}
-
-.content-table-td-name {
-  line-height: 1.8em;
-}
-
-.content-table-td {
-  line-height: 1.8em;
-  max-width: 25px;
-  padding: 0 5px 0 15px;
-  width: 24%;
-}
-
-.content-table-td-colon {
-  width: 5px;
-}
-
-.content-table-td-data {
-  padding-left: 10px;
-}
-
-.content-table-tr.content-table-ex-name {
-  text-align: center;
-}
-
-.content-tip .material-icons-outlined {
-  padding: 0 0.35em;
-}
-
-.content-tip {
-  background: var(--tip_bg);
-  line-height: 2.5em;
-  margin: 10px 0;
-  max-width: 600px;
-  vertical-align: middle;
-  width: 100%;
-}
-
-.content-list {
-  list-style: unset;
-  line-height: 1.5em;
-  padding: 10px 30px;
-}
-
-.content-list .material-icons {
-  font: 1em/100% "material icons";
-  vertical-align: middle;
-}
-
-.content-list-sub-list {
-  list-style: circle;
-  line-height: 1.5em;
-  padding: 10px 30px;
-}
-
-.content-code {
-  background: var(--code_block);
-  display: flex;
-  flex-direction: column;
-  margin: 10px 8% 10px 0;
-  padding: 30px 80px 30px 30px;
-}
-
-.code-line {
-  color: var(--code_font) !important;
-  line-height: 1.5em;
-}
-
 .horiz-divider {
   border: none;
   background: var(--hor_line);
   height: 1px;
   margin: 30px 0;
-}
-
-.content-img {
-  max-width: 500px;
-  width: 100%;
-}
-
-.img-margin {
-  margin: 15px 0;
-}
-
-.content-video {
-  border-radius: 1%;
-  height: 600px;
-  margin: 15px 0;
-  max-width: 500px;
-  width: 100%;
-}
-
-.content-video-horiz {
-  border-radius: 1%;
-  height: 360px;
-  margin: 15px 0;
-  max-width: 500px;
-  width: 100%;
-}
-
-.content-flex {
-  display: flex;
-  flex-wrap: wrap;
-  max-width: 900px;
-  width: 100%;
-}
-
-.content-flex-img {
-  max-width: 400px;
-  width: 100%;
-}
-
-.flex-frame {
-  height: 570px;
-  margin: 1em;
-  max-width: 380px;
-  width: 100%;
-}
-
-.frame-video {
-  border-radius: 1%;
-  height: 540px;
-  width: 100%;
-}
-
-.frame-caption {
-  color: var(--font_gray);
-  margin: 0.8em;
 }
