--- a/css/components/content/multimedia.css
+++ b/css/components/content/multimedia.css
@@ -58,3 +58,10 @@
   color: var(--font_gray);
   margin: 0.8em;
 }
+
+.content-pdf {
+  height: 1000px;
+  margin: 15px;
+  max-width: 800px;
+  width: 100%;
+}
